# aupp-lms-devops-cicd

./: .gitignore  Jenkinsfile  Makefile  README.md  sonar-project.properties
.devcontainer/: devcontainer.json
app/: .dockerignore  Dockerfile  Makefile  main.py  pyproject.toml
app/api/: deps.py
app/api/routes/: __init__.py  auth.py  items.py  system.py
app/core/: config.py  metrics.py  security.py
app/db/: database.py
app/models/: item.py  user.py
app/schemas/: item.py  user.py
app/services/: auth_service.py
deploy/: docker-compose.yml    prometheus.yml
infra/: infra_contents.md
infra/ansible/playbooks/: deploy.yml  server.yml
infra/terraform/: .terraform.lock.hcl  main.tf  outputs.tf  variables.tf
infra/terraform/modules/compute/: cloud-init.yaml.tftpl  main.tf  outputs.tf  variables.tf
infra/terraform/templates/: inventory.ini.tftpl
makefiles/: Makefile.ansible  Makefile.setup  Makefile.terraform
terraform-setup/: .terraform.lock.hcl  main.tf  outputs.tf  variables.tf  versions.tf
terraform-setup/ansible/: inventory.ini
terraform-setup/ansible/playbooks/: server.yml
terraform-setup/templates/: inventory.ini.tftpl
